packages/noir/native/opentui_v0_5_1.h

// Noir-owned declaration of the canonical OpenTUI v0.5.1 exports selected by
// this package. The source of truth is external/opentui/packages/core/src/zig/
// lib.zig at ad9a818d7a9d73f3386e92a445d0feb4b395c69e.

typedef uint32_t OpenTuiHandle;
typedef struct CursorStyleOptions {
  uint8_t style;
  uint8_t blinking;
  const uint16_t *color;
  uint8_t cursor;
} CursorStyleOptions;
typedef struct NativeImageInfo {
  uint32_t width;
  uint32_t height;
  uint32_t sourceWidth;
  uint32_t sourceHeight;
  uint32_t format;
  uint32_t colorStatus;
  uint32_t orientation;
  uint32_t hasAlpha;
} NativeImageInfo;
typedef struct ImageDrawOptions {
  int32_t x;
  int32_t y;
  uint32_t width;
  uint32_t height;
  uint32_t pixelWidth;
  uint32_t pixelHeight;
  uint32_t sourceX;
  uint32_t sourceY;
  uint32_t sourceWidth;
  uint32_t sourceHeight;
  uint32_t protocol;
} ImageDrawOptions;
void bufferSetCellWithAlphaBlending(OpenTuiHandle buffer, uint32_t x,
                                    uint32_t y, uint32_t character,
                                    const uint16_t *fg, const uint16_t *bg,
                                    uint32_t attributes);
void drawFrameBuffer(OpenTuiHandle target, int32_t destX, int32_t destY,
                     OpenTuiHandle frameBuffer, uint32_t sourceX,
                     uint32_t sourceY, uint32_t sourceWidth,
                     uint32_t sourceHeight);
void bufferResize(OpenTuiHandle buffer, uint32_t width, uint32_t height);
// Native clip and opacity stacks. Every native write funnel honours both
// (buffer.zig validateAndIndex -> isPointInScissor, and getCurrentOpacity).
// Exposed on the raw binding surface; Noir's own clip seam stays in Dart.
void bufferPushScissorRect(OpenTuiHandle buffer, int32_t x, int32_t y,
                           uint32_t width, uint32_t height);
void bufferPopScissorRect(OpenTuiHandle buffer);
void bufferClearScissorRects(OpenTuiHandle buffer);
void bufferPushOpacity(OpenTuiHandle buffer, float opacity);
void bufferPopOpacity(OpenTuiHandle buffer);
void bufferClearOpacity(OpenTuiHandle buffer);
uint8_t bufferDrawImage(OpenTuiHandle buffer, OpenTuiHandle image,
                        const ImageDrawOptions *options);
void setCursorPosition(OpenTuiHandle renderer, int32_t x, int32_t y,
                       bool visible);
void setCursorStyleOptions(OpenTuiHandle renderer,
                           const CursorStyleOptions *options);
void enableMouse(OpenTuiHandle renderer, bool enableMovement);
void disableMouse(OpenTuiHandle renderer);
void enableKittyKeyboard(OpenTuiHandle renderer, uint8_t flags);
void disableKittyKeyboard(OpenTuiHandle renderer);
void setupTerminal(OpenTuiHandle renderer, bool useAlternateScreen);
void queryPixelResolution(OpenTuiHandle renderer);
void addToHitGrid(OpenTuiHandle renderer, int32_t x, int32_t y,
                  uint32_t width, uint32_t height, uint32_t id);
uint32_t checkHit(OpenTuiHandle renderer, uint32_t x, uint32_t y);
void processCapabilityResponse(OpenTuiHandle renderer,
                               const uint8_t *response, uint32_t responseLen);
uint32_t imageDecode(const uint8_t *data, uint32_t dataLen,
                     OpenTuiHandle *outHandle);
uint32_t imageCreateFromRgba(const uint8_t *pixels, uint64_t pixelsLen,
                            uint32_t width, uint32_t height, uint32_t stride,
                            OpenTuiHandle *outHandle);
void imageDestroy(OpenTuiHandle image);
uint32_t imageGetInfo(OpenTuiHandle image, NativeImageInfo *outInfo);