lib/src/ffi/generated_bindings.dart


  void bufferSetCellWithAlphaBlending(
    int buffer,
    int x,
    int y,
    int character,
    ffi.Pointer<ffi.Uint16> fg,
    ffi.Pointer<ffi.Uint16> bg,
    int attributes,
  ) {
    return _bufferSetCellWithAlphaBlending(
      buffer,
      x,
      y,
      character,
      fg,
      bg,
      attributes,
    );
  }

  late final _bufferSetCellWithAlphaBlendingPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            OpenTuiHandle,
            ffi.Uint32,
            ffi.Uint32,
            ffi.Uint32,
            ffi.Pointer<ffi.Uint16>,
            ffi.Pointer<ffi.Uint16>,
            ffi.Uint32,
          )
        >
      >('bufferSetCellWithAlphaBlending');
  late final _bufferSetCellWithAlphaBlending =
      _bufferSetCellWithAlphaBlendingPtr
          .asFunction<
            void Function(
              int,
              int,
              int,
              int,
              ffi.Pointer<ffi.Uint16>,
              ffi.Pointer<ffi.Uint16>,
              int,
            )
          >();

  void drawFrameBuffer(
    int target,
    int destX,
    int destY,
    int frameBuffer,
    int sourceX,
    int sourceY,
    int sourceWidth,
    int sourceHeight,
  ) {
    return _drawFrameBuffer(
      target,
      destX,
      destY,
      frameBuffer,
      sourceX,
      sourceY,
      sourceWidth,
      sourceHeight,
    );
  }

  late final _drawFrameBufferPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            OpenTuiHandle,
            ffi.Int32,
            ffi.Int32,
            OpenTuiHandle,
            ffi.Uint32,
            ffi.Uint32,
            ffi.Uint32,
            ffi.Uint32,
          )
        >
      >('drawFrameBuffer');
  late final _drawFrameBuffer = _drawFrameBufferPtr
      .asFunction<void Function(int, int, int, int, int, int, int, int)>();

  void bufferResize(int buffer, int width, int height) {
    return _bufferResize(buffer, width, height);
  }

  late final _bufferResizePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(OpenTuiHandle, ffi.Uint32, ffi.Uint32)
        >
      >('bufferResize');
  late final _bufferResize = _bufferResizePtr
      .asFunction<void Function(int, int, int)>();

  /// Native clip and opacity stacks. Every native write funnel honours both
  /// (buffer.zig validateAndIndex -> isPointInScissor, and getCurrentOpacity).
  /// Exposed on the raw binding surface; Noir's own clip seam stays in Dart.
  void bufferPushScissorRect(int buffer, int x, int y, int width, int height) {
    return _bufferPushScissorRect(buffer, x, y, width, height);
  }

  late final _bufferPushScissorRectPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            OpenTuiHandle,
            ffi.Int32,
            ffi.Int32,
            ffi.Uint32,
            ffi.Uint32,
          )
        >
      >('bufferPushScissorRect');
  late final _bufferPushScissorRect = _bufferPushScissorRectPtr
      .asFunction<void Function(int, int, int, int, int)>();

  void bufferPopScissorRect(int buffer) {
    return _bufferPopScissorRect(buffer);
  }

  late final _bufferPopScissorRectPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(OpenTuiHandle)>>(
        'bufferPopScissorRect',
      );
  late final _bufferPopScissorRect = _bufferPopScissorRectPtr
      .asFunction<void Function(int)>();

  void bufferClearScissorRects(int buffer) {
    return _bufferClearScissorRects(buffer);
  }

  late final _bufferClearScissorRectsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(OpenTuiHandle)>>(
        'bufferClearScissorRects',
      );
  late final _bufferClearScissorRects = _bufferClearScissorRectsPtr
      .asFunction<void Function(int)>();

  void bufferPushOpacity(int buffer, double opacity) {
    return _bufferPushOpacity(buffer, opacity);
  }

  late final _bufferPushOpacityPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(OpenTuiHandle, ffi.Float)>>(
        'bufferPushOpacity',
      );
  late final _bufferPushOpacity = _bufferPushOpacityPtr
      .asFunction<void Function(int, double)>();

  void bufferPopOpacity(int buffer) {
    return _bufferPopOpacity(buffer);
  }

  late final _bufferPopOpacityPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(OpenTuiHandle)>>(
        'bufferPopOpacity',
      );
  late final _bufferPopOpacity = _bufferPopOpacityPtr
      .asFunction<void Function(int)>();

  void bufferClearOpacity(int buffer) {
    return _bufferClearOpacity(buffer);
  }

  late final _bufferClearOpacityPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(OpenTuiHandle)>>(
        'bufferClearOpacity',
      );
  late final _bufferClearOpacity = _bufferClearOpacityPtr
      .asFunction<void Function(int)>();

  int bufferDrawImage(
    int buffer,
    int image,
    ffi.Pointer<ImageDrawOptions> options,
  ) {
    return _bufferDrawImage(buffer, image, options);
  }

  late final _bufferDrawImagePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Uint8 Function(
            OpenTuiHandle,
            OpenTuiHandle,
            ffi.Pointer<ImageDrawOptions>,
          )
        >
      >('bufferDrawImage');
  late final _bufferDrawImage = _bufferDrawImagePtr
      .asFunction<int Function(int, int, ffi.Pointer<ImageDrawOptions>)>();

  void setCursorPosition(int renderer, int x, int y, bool visible) {
    return _setCursorPosition(renderer, x, y, visible);
  }

  late final _setCursorPositionPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(OpenTuiHandle, ffi.Int32, ffi.Int32, ffi.Bool)
        >
      >('setCursorPosition');
  late final _setCursorPosition = _setCursorPositionPtr
      .asFunction<void Function(int, int, int, bool)>();

  void setCursorStyleOptions(
    int renderer,
    ffi.Pointer<CursorStyleOptions> options,
  ) {
    return _setCursorStyleOptions(renderer, options);
  }

  late final _setCursorStyleOptionsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(OpenTuiHandle, ffi.Pointer<CursorStyleOptions>)
        >
      >('setCursorStyleOptions');
  late final _setCursorStyleOptions = _setCursorStyleOptionsPtr
      .asFunction<void Function(int, ffi.Pointer<CursorStyleOptions>)>();

  void enableMouse(int renderer, bool enableMovement) {
    return _enableMouse(renderer, enableMovement);
  }

  late final _enableMousePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(OpenTuiHandle, ffi.Bool)>>(
        'enableMouse',
      );
  late final _enableMouse = _enableMousePtr
      .asFunction<void Function(int, bool)>();

  void disableMouse(int renderer) {
    return _disableMouse(renderer);
  }

  late final _disableMousePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(OpenTuiHandle)>>(
        'disableMouse',
      );
  late final _disableMouse = _disableMousePtr.asFunction<void Function(int)>();

  void enableKittyKeyboard(int renderer, int flags) {
    return _enableKittyKeyboard(renderer, flags);
  }

  late final _enableKittyKeyboardPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(OpenTuiHandle, ffi.Uint8)>>(
        'enableKittyKeyboard',
      );
  late final _enableKittyKeyboard = _enableKittyKeyboardPtr
      .asFunction<void Function(int, int)>();

  void disableKittyKeyboard(int renderer) {
    return _disableKittyKeyboard(renderer);
  }

  late final _disableKittyKeyboardPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(OpenTuiHandle)>>(
        'disableKittyKeyboard',
      );
  late final _disableKittyKeyboard = _disableKittyKeyboardPtr
      .asFunction<void Function(int)>();

  void setupTerminal(int renderer, bool useAlternateScreen) {
    return _setupTerminal(renderer, useAlternateScreen);
  }

  late final _setupTerminalPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(OpenTuiHandle, ffi.Bool)>>(
        'setupTerminal',
      );
  late final _setupTerminal = _setupTerminalPtr
      .asFunction<void Function(int, bool)>();

  void queryPixelResolution(int renderer) {
    return _queryPixelResolution(renderer);
  }

  late final _queryPixelResolutionPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(OpenTuiHandle)>>(
        'queryPixelResolution',
      );
  late final _queryPixelResolution = _queryPixelResolutionPtr
      .asFunction<void Function(int)>();

  void addToHitGrid(int renderer, int x, int y, int width, int height, int id) {
    return _addToHitGrid(renderer, x, y, width, height, id);
  }

  late final _addToHitGridPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            OpenTuiHandle,
            ffi.Int32,
            ffi.Int32,
            ffi.Uint32,
            ffi.Uint32,
            ffi.Uint32,
          )
        >
      >('addToHitGrid');
  late final _addToHitGrid = _addToHitGridPtr
      .asFunction<void Function(int, int, int, int, int, int)>();

  int checkHit(int renderer, int x, int y) {
    return _checkHit(renderer, x, y);
  }

  late final _checkHitPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Uint32 Function(OpenTuiHandle, ffi.Uint32, ffi.Uint32)
        >
      >('checkHit');
  late final _checkHit = _checkHitPtr.asFunction<int Function(int, int, int)>();

  void processCapabilityResponse(
    int renderer,
    ffi.Pointer<ffi.Uint8> response,
    int responseLen,
  ) {
    return _processCapabilityResponse(renderer, response, responseLen);
  }

  late final _processCapabilityResponsePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(OpenTuiHandle, ffi.Pointer<ffi.Uint8>, ffi.Uint32)
        >
      >('processCapabilityResponse');
  late final _processCapabilityResponse = _processCapabilityResponsePtr
      .asFunction<void Function(int, ffi.Pointer<ffi.Uint8>, int)>();

  int imageDecode(
    ffi.Pointer<ffi.Uint8> data,
    int dataLen,
    ffi.Pointer<OpenTuiHandle> outHandle,
  ) {
    return _imageDecode(data, dataLen, outHandle);
  }

  late final _imageDecodePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Uint32 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Uint32,
            ffi.Pointer<OpenTuiHandle>,
          )
        >
      >('imageDecode');
  late final _imageDecode = _imageDecodePtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<OpenTuiHandle>)
      >();

  int imageCreateFromRgba(
    ffi.Pointer<ffi.Uint8> pixels,
    int pixelsLen,
    int width,
    int height,
    int stride,
    ffi.Pointer<OpenTuiHandle> outHandle,
  ) {
    return _imageCreateFromRgba(
      pixels,
      pixelsLen,
      width,
      height,
      stride,
      outHandle,
    );
  }

  late final _imageCreateFromRgbaPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Uint32 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Uint64,
            ffi.Uint32,
            ffi.Uint32,
            ffi.Uint32,
            ffi.Pointer<OpenTuiHandle>,
          )
        >
      >('imageCreateFromRgba');
  late final _imageCreateFromRgba = _imageCreateFromRgbaPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
          int,
          int,
          ffi.Pointer<OpenTuiHandle>,
        )
      >();

  void imageDestroy(int image) {
    return _imageDestroy(image);
  }

  late final _imageDestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(OpenTuiHandle)>>(
        'imageDestroy',
      );
  late final _imageDestroy = _imageDestroyPtr.asFunction<void Function(int)>();

  int imageGetInfo(int image, ffi.Pointer<NativeImageInfo> outInfo) {
    return _imageGetInfo(image, outInfo);
  }

  late final _imageGetInfoPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Uint32 Function(OpenTuiHandle, ffi.Pointer<NativeImageInfo>)
        >
      >('imageGetInfo');
  late final _imageGetInfo = _imageGetInfoPtr
      .asFunction<int Function(int, ffi.Pointer<NativeImageInfo>)>();
